--- a/Maincode.html
+++ b/Maincode.html
@@ -89,26 +89,98 @@
         .card {
             width: 300px;
             height: 550px;
-            background-image: url('shogi1.jpg');
             background-size: cover;
             background-position: center;
-            border: 1px solid #ddd;
-            border-radius: 10px;
+            border: 1px solid #ddd;          
             padding: 10px;
             position: absolute;
             top: 10px;
         }
         
         #card-1 {
+            background-image: url('shogi1.jpg');
+            border-radius: 10px;
             left: 10px;
         }
         
         #card-2 {
+            background-image: url('shogi1.jpg');
+            border-radius: 10px;
             right: 10px;
         }
+
+        .center-card {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.square-card {
+  width: 450px;
+  height: 450px;
+  background-color: #fff;
+  background-image: url('Shogi_board.png');
+  opacity: 80%;
+  border: 1px solid #ddd;
+  padding: 20px;
+}
+
+.Elimination-card-1 {
+    position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-card {
+  width: 450px;
+  height: 10px;
+  background-color: #fff;
+  background-image: url('Shogi_board.png');
+  opacity: 80%;
+  border: 1px solid #ddd;
+  padding: 20px;
+}
+
+.Elimination-card-2 {
+    position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom-card {
+  width: 450px;
+  height: 10px;
+  background-color: #fff;
+  background-image: url('Shogi_board.png');
+  opacity: 80%;
+  border: 1px solid #ddd;
+  padding: 20px;
+}
+
     </style>
 </head>
 <body>
+    <div class="center-card">
+        <div class="card square-card"></div>
+      </div>
+      <div class="Elimination-card-1">
+        <div class="card top-card"></div>
+      </div>     
+      <div class="Elimination-card-2">
+        <div class="card bottom-card"></div>
+      </div>     
     <div class="timer-container">
         <div class="player-container">
             <div class="card" id="card-1"><br><br>
